--- a/pet_place/app/views/pets/_form.html.erb
+++ b/pet_place/app/views/pets/_form.html.erb
@@ -1,25 +1,14 @@
 <%= form_for(@pet) do |f| %>
-  <% if @pet.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pet.errors.count, "error") %> prohibited this pet from being saved:</h2>
-
-      <ul>
-      <% @pet.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+  
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
   
-  <div class="field">
+<div class="field">
     <%= f.label :person %><br />
-    <%= f.text_field :person %>
-  </div>
+    <%= f.collection_select :person_id, Person.all, :id, :name, :prompt => true %>
+  </div>  
   
   <div class="actions">
     <%= f.submit %>
